--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
+    "dev": "next dev",
+    "build": "next build && prisma generate && prisma migrate deploy",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.4",
@@ -43,40 +44,41 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@react-google-maps/api": "^2.20.3",
+    "ajv": "^8.17.1",
     "bcrypt-ts": "^5.0.3",
-    "class-variance-authority": "^0.7.1",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
-    "embla-carousel-react": "^8.5.1",
+    "embla-carousel-react": "^8.1.6",
     "input-otp": "^1.4.1",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.462.0",
-    "next": "15.0.3",
+    "next": "^14.2.12",
     "next-auth": "^5.0.0-beta.25",
-    "next-themes": "^0.4.3",
+    "next-themes": "^0.3.0",
     "nprogress": "^0.2.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18.3.1",
-    "react-hook-form": "^7.53.2",
+    "react-dom": "^18",
+    "react-hook-form": "^7.52.1",
     "react-leaflet": "^4.2.1",
-    "react-resizable-panels": "^2.1.7",
-    "recharts": "^2.13.3",
-    "sonner": "^1.7.0",
-    "tailwind-merge": "^2.5.5",
+    "react-resizable-panels": "^2.0.20",
+    "recharts": "^2.12.7",
+    "sonner": "^1.5.0",
+    "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^1.1.1",
+    "vaul": "^0.9.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.15",
-    "@types/node": "^20",
+    "@types/node": "^20.16.1",
     "@types/nprogress": "^0.2.3",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.3",
+    "@types/react": "^18.3.16",
+    "@types/react-dom": "^18.3.5",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^14.2.15",
     "postcss": "^8",
     "prisma": "^6.0.0",
     "tailwindcss": "^3.4.1",
