--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "skipLibCheck": true,
     "strict": true,
     "noEmit": true,
+    "noImplicitAny": true,
     "esModuleInterop": true,
     "module": "esnext",
     "moduleResolution": "bundler",
@@ -18,12 +19,12 @@
         "name": "next"
       }
     ],
-    "baseUrl": ".",
+    "baseUrl": ".", 
     "paths": {
       "@/*": ["./src/*"],
       "@types/*": ["src/types/*"]
-    },
-    "target": "ES2017"
+      
+    }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
