--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.1.6",
+    "formidable": "^3.5.2",
     "input-otp": "^1.4.1",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.462.0",
@@ -72,6 +73,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/formidable": "^3.4.5",
     "@types/leaflet": "^1.9.15",
     "@types/node": "^20.16.1",
     "@types/nprogress": "^0.2.3",
