--- a/package.json
+++ b/package.json
@@ -47,11 +47,11 @@
     "ajv": "^8.17.1",
     "bcrypt-ts": "^5.0.3",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.1.6",
-    "formidable": "^3.5.2",
     "input-otp": "^1.4.1",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.462.0",
@@ -73,7 +73,6 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/formidable": "^3.4.5",
     "@types/leaflet": "^1.9.15",
     "@types/node": "^20.16.1",
     "@types/nprogress": "^0.2.3",
