--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@react-google-maps/api": "^2.20.5",
     "ajv": "^8.17.1",
     "bcrypt-ts": "^5.0.3",
+    "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
